--- a/style.css
+++ b/style.css
@@ -38,11 +38,16 @@ nav{
 
 #aboutme{
     color:teal;
-    border-bottom:1px solid #cccccc;  
+    border-bottom:2px solid #cccccc;  
 }
 
 #aboutMeImage{
     transform: rotate(90deg);
+}
+
+#paragraph{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12;
 }
 
 div p{
@@ -65,4 +70,137 @@ footer section{
 h6{
     color:white;
     text-align: center;
+}
+
+
+/*Portfolio page*/
+
+#aboutportfolio{
+    width: 960px;
+    height: 1000px;
+    background-color: #ffffff;
+    padding: 20px;
+    border: 0.5px solid #cccccc;
+    margin: auto;
+    margin-top: 50px;
+    overflow: auto;
+    clear: both;
+
+}
+
+#portfolio{
+
+    color:teal;
+    border-bottom:2px solid #cccccc;  
+
+}
+
+.hangman{
+    position:absolute;
+    z-index: 1;
+    float: left;
+}
+
+#hangmanword{
+
+    background-color: teal;
+    color: white;
+    width: 250px;
+    height:30px;
+    padding: 25px;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    margin-top:175px;
+}
+
+.rpg{
+    position:absolute;
+    z-index: 1;
+    float: left;
+}
+
+#rpgword{
+    
+    background-color: teal;
+    color: white;
+    width: 250px;
+    height:30px;
+    padding: 25px;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    margin-top:175px;
+}
+#rpg{
+    margin-left: 350px;
+}
+
+.trivia{
+    position:absolute;
+    z-index: 1;
+    float: left;
+}
+
+#triviaword{
+
+    background-color: teal;
+    color: white;
+    width: 250px;
+    height:30px;
+    padding: 25px;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    margin-top:175px;
+
+}
+
+#trivia{
+    margin-top: 350px;
+}
+
+.rutgers{
+    position:absolute;
+    z-index: 1;
+    float: left;
+}
+
+#rutgersword{
+    
+    background-color: teal;
+    color: white;
+    width: 250px;
+    height:30px;
+    padding: 25px;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    margin-top:175px;
+}
+#rutgers{
+    margin-left: 350px;
+    margin-top: 350px;
+}
+
+.rock{
+    position:absolute;
+    z-index: 1;
+    float: left;
+}
+
+#rockword{
+    
+    background-color: teal;
+    color: white;
+    width: 250px;
+    height:30px;
+    padding: 25px;
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    margin-top:175px;
+}
+#rock{
+    margin-top: 700px;
 }
