--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Index page*/
+
 body{
     background-image: url("assets/css/pipes.png");
 }
@@ -203,4 +205,39 @@ h6{
 }
 #rock{
     margin-top: 700px;
+}
+
+/*Contact*/
+
+#contact2{
+    
+    color:teal;
+    border-bottom:2px solid #cccccc;  
+}
+
+.col-md-6{
+    color: #777777;
+}
+
+#nameFillOut{
+    width:100%;
+    border-color: #cccccc;
+}
+
+#email{
+    width:100%;
+    border-color: #cccccc;
+}
+
+#message{
+    width:100%;
+    height: 150px;
+    border-color: #cccccc;
+}
+
+.submitButton{
+    background-color: teal;
+    color: white;
+    width: 100px;
+    height:40px;
 }
